# Skel

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
appTest/: appSkel  f.pgm  main.cpp  output.pgm
include/: field.h  genrl.h  skeleton_cuda.hpp  skeleton_cuda_recon.hpp  skelft.h  skelftKernel.h
src/: CMakeLists.txt  skeleton_cuda.cpp  skeleton_cuda_recon.cpp  skelft.cu  skelft_core.cpp
